
[TestWorkItemToN8NResult/TestSendToN8N_0 - 1]
{
 "source-branch": "",
 "version": "",
 "work-items": [
  {
   "id": 1,
   "integration-builds": [
    "25.4.13",
    "1.1.1.1"
   ],
   "tags": [],
   "title": ""
  },
  {
   "id": 2,
   "integration-builds": [
    "25.4.13",
    "1.1.1.1"
   ],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": "Test 2"
  },
  {
   "id": 3,
   "integration-builds": [
    "25.4.13",
    "1.1.1.1"
   ],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": "Test 3"
  },
  {
   "id": 4,
   "integration-builds": [],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": "Test 4"
  }
 ]
}
---

[TestWorkItemToN8NResult/TestSendToN8N_1 - 1]
{
 "source-branch": "",
 "version": "",
 "work-items": [
  {
   "id": 1,
   "integration-builds": [
    "25.4.13",
    "1.1.1.1"
   ],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": "Test 1"
  },
  {
   "id": 2,
   "integration-builds": [
    "25.4.13",
    "1.1.1.1"
   ],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": ""
  },
  {
   "id": 3,
   "integration-builds": [],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": "Test 3"
  },
  {
   "id": 4,
   "integration-builds": [
    "25.4.13",
    "1.1.1.1"
   ],
   "tags": [
    "25.4.13",
    "1.1.1.1"
   ],
   "title": "Test 4"
  }
 ]
}
---
